; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/bcm/extr_cygnus-ssp.c_cygnus_dai_get_portinfo.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/bcm/extr_cygnus-ssp.c_cygnus_dai_get_portinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cygnus_aio_port = type { i32 }
%struct.snd_soc_dai = type { i64 }
%struct.cygnus_audio = type { %struct.cygnus_aio_port* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cygnus_aio_port* (%struct.snd_soc_dai*)* @cygnus_dai_get_portinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cygnus_aio_port* @cygnus_dai_get_portinfo(%struct.snd_soc_dai* %0) #0 {
  %2 = alloca %struct.snd_soc_dai*, align 8
  %3 = alloca %struct.cygnus_audio*, align 8
  store %struct.snd_soc_dai* %0, %struct.snd_soc_dai** %2, align 8
  %4 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %2, align 8
  %5 = call %struct.cygnus_audio* @snd_soc_dai_get_drvdata(%struct.snd_soc_dai* %4)
  store %struct.cygnus_audio* %5, %struct.cygnus_audio** %3, align 8
  %6 = load %struct.cygnus_audio*, %struct.cygnus_audio** %3, align 8
  %7 = getelementptr inbounds %struct.cygnus_audio, %struct.cygnus_audio* %6, i32 0, i32 0
  %8 = load %struct.cygnus_aio_port*, %struct.cygnus_aio_port** %7, align 8
  %9 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %2, align 8
  %10 = getelementptr inbounds %struct.snd_soc_dai, %struct.snd_soc_dai* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = getelementptr inbounds %struct.cygnus_aio_port, %struct.cygnus_aio_port* %8, i64 %11
  ret %struct.cygnus_aio_port* %12
}

declare dso_local %struct.cygnus_audio* @snd_soc_dai_get_drvdata(%struct.snd_soc_dai*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
